# datakube

./: .pre-commit-config.yaml  README.md  pyproject.toml
datakube/: __init__.py  constants.py  data_utils.py  df_utils.py  k8s_utils.py  parquet_utils.py  plot_utils.py  prom_utils.py
tests/: conftest.py  test_data_utils.py  test_df_utils.py  test_k8s_utils.py  test_plot_utils.py  test_prom_utils.py
tests/data/: df.parquet2  jobs.json  sim.json
tests/data/kube_job_owner/: 2024041723.parquet
