[tool.poetry]
name = "datakube"
version = "0.1.0"
description = "Data analysis for Kubernetes data metrics"
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
readme = "README.md"

[tool.poetry.dependencies]
arrow = "^1.3.0"
bokeh = "^3.4.1"
duckdb = "^1.0.0"
kubernetes-client = "^0.1.8"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
python = "^3.10"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
simplejson = "^3.19.2"
types-simplejson = "^3.19.0.20240310"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.1.1"
ipykernel = "^6.29.4"
pandas-stubs = "^2.2.1.240316"
ruff = "^0.4.2"
kubernetes-stubs = "^22.6.0.post1"
types-boto3 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["PLR2004", "PLR0913", "PLR0917"]
select = ["E", "F", "I", "W", "PL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
force-single-line = true
known-third-party = ["pandas"]  # I don't understand why this is needed...

[[tool.mypy.overrides]]
module = "duckdb.duckdb"
ignore_missing_imports = true
